Purge Unused crashes if mouse not moved away from popup before confirm delete with enter key #125006
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#125006
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.17763-SP0 x64
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 | 4.6.0 NVIDIA 556.12
Blender Version
Broken: 4.2.0
main
2024-06-01dbc842b21e7d
Broken: 4.2.0,
release
2024-07-16a51f293548ad
Broken: 4.3.0
main
2024-07-170b70a9edc56b
Worked: unknown
Change came with
0fd8f29e88
Short description of error
Purge Unused crashes if mouse not moved away from popup before confirm delete with enter key
Not fluent in Python but isn't there supposed to be something after dot at
bpy.data.window_managers["WinMan"].
?Exact steps for others to reproduce the error
Default startup
Enter
Using
D
key does not cause a crash.Crashed in
ui_apply_but_funcs_after
. Looks likeafter.popup_op
is invalid when pressing enter. Seems that it should be assigned an operator, but if there's no extra event, the previously assigned operator is deleted after initial invoking (I think) and the address is still referencing the old operator instance.Purge Unused crashes if mouse not moved before confirm delete with enter keyto Purge Unused crashes if mouse not moved away from popup before confirm delete with enter keyPrefer if crashes are always set to High priority
Change came with
0fd8f29e88
CC @mont29 (even though I assume this is more for #UserInterface to fix)
Seems to be a problem with the rare combination of
WM_operator_props_dialog_popup
with an operator that has acheck
callback ?Some further inspection: we are actually handling two buttons here : the operator button as well as the toggle button for one of the options (if the mouse happens to be over that button as well)
In order to not handle other buttons (in case we are executing the
UI_BUT_ACTIVE_DEFAULT
one via ENTER), we could simply do the followingThat would prevent us going into the operator
check
callback with an operator that has been (at least partially) been freedPossible fix is up, see !125085